public interface Aboutwork {
    public void performanceOfwork();
}