public class MenuException extends Exception {
    @Override
    public String getMessage(){
        return "Неправильна ціна ";

    }
}
