public class MenunameException extends Exception {
    public String getMessage() {
        return "Неправильно ";
    }
}